--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
     "@hookform/resolvers": "^3.3.3",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.3",
@@ -21,6 +23,7 @@
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "openai": "^4.24.1",
+    "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
