--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "postinstall": "prisma generate",
+    "build": "prisma generate && next build",
     "start": "next start",
+    "postinstall": "npx prisma generate",
     "lint": "next lint"
     },
   "dependencies": {
